--- a/sample-webapp/src/main/resources/application.properties
+++ b/sample-webapp/src/main/resources/application.properties
@@ -4,12 +4,12 @@ welcome.message: Mkyong
 spring.thymeleaf.cache=false
 
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/saml-jwt.p12
+#server.ssl.key-store=classpath:keystore/saml-jwt.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=saml-jwt
+#server.ssl.key-store-password=saml-jwt
 # The alias mapped to the certificate
-server.ssl.key-alias=saml-jwt
+#server.ssl.key-alias=saml-jwt
 	
-security.require-ssl=false
+#security.require-ssl=false
