--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,54 @@
 version: '3.5'
 services:
-    passport-saml-nodejs-proxy:
+    sp1:
         environment:
         - HTTPS=true
-        container_name: passport-saml-nodejs-proxy
+        - CONFIG_FILE=sp1.config.json
+        container_name: sp1
         build:
             context: .
             dockerfile: Dockerfile
         ports:
-        - "443:3000"
+        - "8443:3000"
         restart: always
         volumes:
         - ./cert:/usr/src/app/cert
         image: malotian/passport-saml-nodejs-proxy:latest
         networks:
             - docker.local
-        hostname: saml-sp
+        hostname: sp1
         domainname: docker.local
-
+    sp2:
+        environment:
+        - HTTPS=true
+        - CONFIG_FILE=sp2.config.json
+        container_name: sp2
+        build:
+            context: .
+            dockerfile: Dockerfile
+        ports:
+        - "9443:3000"
+        restart: always
+        volumes:
+        - ./cert:/usr/src/app/cert
+        image: malotian/passport-saml-nodejs-proxy:latest
+        networks:
+            - docker.local
+        hostname: sp2
+        domainname: docker.local        
     sample-webapp:
         container_name: sample-webapp
         build:
             context: sample-webapp
             dockerfile: Dockerfile
         ports:
-        - "80:80"
+        - "8080:80"
         restart: always
         image: malotian/sample-webapp:latest
         networks:
             docker.local:
                 aliases:
-                    - cerpassrx-dev.azurewebsites.net
+                    - sample-webapp.docker.local
         hostname: sample-webapp
         domainname: docker.local
 
@@ -38,3 +56,4 @@ networks:
     docker.local:
        driver: bridge
        name: docker.local
+
